[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/styles/back.png" type="Texture" id=1]
[ext_resource path="res://assets/styles/panel_1.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/styles/Icon_Award.png" type="Texture" id=3]
[ext_resource path="res://assets/styles/Icon_Play.png" type="Texture" id=4]
[ext_resource path="res://assets/themes/menu.tres" type="Theme" id=5]
[ext_resource path="res://assets/styles/Item1.png" type="Texture" id=6]
[ext_resource path="res://assets/styles/Icon_Info.png" type="Texture" id=7]
[ext_resource path="res://assets/styles/Icon_Star.png" type="Texture" id=8]
[ext_resource path="res://assets/styles/title.png" type="Texture" id=9]
[ext_resource path="res://assets/styles/Icon_Question.png" type="Texture" id=10]
[ext_resource path="res://assets/styles/Icon_Settings.png" type="Texture" id=11]
[ext_resource path="res://menu/new_main_screen.gd" type="Script" id=12]
[ext_resource path="res://assets/styles/Item2.png" type="Texture" id=13]
[ext_resource path="res://menu/protuberance_explanation.tscn" type="PackedScene" id=14]

[node name="new_main_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 12 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -91.0
margin_right = 176.0
margin_bottom = 146.0
custom_styles/panel = ExtResource( 2 )

[node name="Title" type="TextureRect" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -327.0
margin_top = -114.0
margin_right = 327.0
margin_bottom = -16.0
texture = ExtResource( 9 )

[node name="TextureRect2" type="TextureRect" parent="Panel/Title"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -39.0
margin_right = -13.0
margin_bottom = 29.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 34.0
margin_top = 23.0
margin_right = -34.0
margin_bottom = -48.0
grow_horizontal = 2
alignment = 1

[node name="Play" type="Button" parent="Panel/VBoxContainer"]
margin_right = 298.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
text = "K_PLAY"

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Play"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 17.0
margin_top = -20.0
margin_right = 57.0
margin_bottom = 20.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="About" type="Button" parent="Panel/VBoxContainer"]
margin_top = 64.0
margin_right = 298.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 60 )
text = "K_ABOUT"

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/About"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 17.0
margin_top = -20.0
margin_right = 57.0
margin_bottom = 20.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="Options" type="Button" parent="Panel/VBoxContainer"]
margin_top = 128.0
margin_right = 298.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 60 )
text = "K_OPTIONS"

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Options"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 17.0
margin_top = -20.0
margin_right = 57.0
margin_bottom = 20.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 192.0
margin_right = 298.0
margin_bottom = 192.0

[node name="Floating" type="TextureRect" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -116.5
margin_right = 295.0
margin_bottom = 27.5
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Floating"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = -50.0
margin_right = 97.0
margin_bottom = 16.0
custom_constants/separation = -11

[node name="TextureRect" type="TextureRect" parent="Panel/Floating/HBoxContainer"]
margin_right = 102.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="Panel/Floating/HBoxContainer"]
margin_left = 91.0
margin_right = 194.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="LevelSelectionPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -435.0
margin_top = -165.0
margin_right = 435.0
margin_bottom = 165.0
custom_styles/panel = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="LevelSelectionPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -261.0
margin_top = -100.0
margin_right = 261.0
margin_bottom = -6.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="LevelSelectionPanel/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Level Selection"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="LevelSelectionPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 37.0
margin_top = 23.0
margin_right = -37.0
margin_bottom = -23.0

[node name="LevelsList" type="GridContainer" parent="LevelSelectionPanel/CenterContainer"]
margin_left = 398.0
margin_top = 142.0
margin_right = 398.0
margin_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="LevelSelectionPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -245.0
margin_top = 8.0
margin_right = 245.0
margin_bottom = 48.0

[node name="Back" type="Button" parent="LevelSelectionPanel/HBoxContainer"]
margin_right = 243.0
margin_bottom = 40.0
disabled = true
text = "Back"

[node name="Cancel" type="Button" parent="LevelSelectionPanel/HBoxContainer"]
margin_left = 247.0
margin_right = 506.0
margin_bottom = 40.0
text = "Cancel"

[node name="TutorialPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -332.0
margin_top = -153.0
margin_right = 332.0
margin_bottom = 236.0
custom_styles/panel = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="TutorialPanel"]
margin_left = 146.0
margin_top = -104.0
margin_right = 530.0
margin_bottom = -1.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="TutorialPanel/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "K_TUTORIAL"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TutorialPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 136.0
margin_right = -136.0
size_flags_horizontal = 3
alignment = 1

[node name="Pimple" type="Button" parent="TutorialPanel/VBoxContainer"]
margin_top = 26.0
margin_right = 392.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 64 )
text = "K_PIMPLE_BUTTON"

[node name="Blackhead" type="Button" parent="TutorialPanel/VBoxContainer"]
margin_top = 94.0
margin_right = 392.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 64 )
text = "K_BLACKHEAD_BUTTON"

[node name="Cyst" type="Button" parent="TutorialPanel/VBoxContainer"]
margin_top = 162.0
margin_right = 392.0
margin_bottom = 226.0
rect_min_size = Vector2( 0, 64 )
text = "K_CYST_BUTTON"

[node name="Lipoma" type="Button" parent="TutorialPanel/VBoxContainer"]
margin_top = 230.0
margin_right = 392.0
margin_bottom = 294.0
rect_min_size = Vector2( 0, 64 )
text = "K_LIPOMA_BUTTON"

[node name="TutPanelBack" type="Button" parent="TutorialPanel/VBoxContainer"]
margin_top = 298.0
margin_right = 392.0
margin_bottom = 362.0
rect_min_size = Vector2( 0, 64 )
text = "K_BACK_BUTTON"

[node name="protuberance_explanation" parent="." instance=ExtResource( 14 )]
visible = false

[node name="TutBackButton" type="Button" parent="."]
visible = false
margin_left = 23.0
margin_top = 14.0
margin_right = 365.0
margin_bottom = 80.0
text = "K_BACK_BUTTON"

[connection signal="pressed" from="Panel/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="gui_input" from="Panel/Floating/HBoxContainer/TextureRect2" to="." method="_on_TextureRect2_gui_input"]
[connection signal="pressed" from="LevelSelectionPanel/HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="LevelSelectionPanel/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="TutorialPanel/VBoxContainer/Pimple" to="." method="_on_tutorial_pressed" binds= [ "pimple" ]]
[connection signal="pressed" from="TutorialPanel/VBoxContainer/Blackhead" to="." method="_on_tutorial_pressed" binds= [ "blackhead" ]]
[connection signal="pressed" from="TutorialPanel/VBoxContainer/Cyst" to="." method="_on_tutorial_pressed" binds= [ "cyst" ]]
[connection signal="pressed" from="TutorialPanel/VBoxContainer/Lipoma" to="." method="_on_tutorial_pressed" binds= [ "lipoma" ]]
[connection signal="pressed" from="TutorialPanel/VBoxContainer/TutPanelBack" to="." method="_on_TutPanelBack_pressed"]
[connection signal="pressed" from="TutBackButton" to="." method="_on_TutBackButton_pressed"]
